# mot

./: .coveragerc  .gitignore  .travis.yml  404.html  CONTRIBUTING.md  LICENSE  Makefile  README.md  index.html  requirements-tests.txt  requirements.txt  setup.cfg  setup.py  sitemap.xml
CONTRIBUTING/: index.html
docker/: Dockerfile.serving  Dockerfile.tests  Dockerfile.training
notebooks/: README.md  Video processing.ipynb  inference_with_mot.ipynb  launch_object_detection_training.ipynb  object_detection_training_and_inference.ipynb
reference/mot/: index.html
reference/mot/object_detection/: index.html
reference/mot/serving/: index.html
reference/mot/tracker/: index.html
scripts/: download_models_and_files.py  download_training_dataset.py  prepare_serving.sh  run_jupyter.sh  run_tensorboard.sh  up_serving.sh
search/: search_index.json
src/mot/: helloworld.py
src/mot/object_detection/: NOTES.md  README.md  common.py  config.py  data.py  eval.py  predict.py  preprocessing.py  query_server.py  train.py  viz.py
src/mot/serving/: README.md  app.py  constants.py  inference.py  run.sh  utils.py  viz.py
src/mot/tracker/: camera_flow.py  object_tracking.py  tracker.py  tracker_metrics.py  tracker_utils.py  video_utils.py
tests/: prepare_tests.sh  run_tests.sh  test_helloworld.py
tests/tests_mot/object_detection/: test_preprocessing.py  test_query_server.py
tests/tests_mot/serving/: test_app.py  test_inference.py  test_utils.py
tests/tests_mot/tracker/: test_camera_flow.py  test_object_tracking.py  test_tracker.py  test_tracker_metrics.py  (+1 more)
(+50 files in other folders)
