[metadata]
name = mot
version = 0.1
description = A Multi Object Tracking Interface on TensorFlow to detect garbage.
long_description = file: README.md
author = Mot contributors
author_email = charles.ollion@heuritech.com
url = https://github.com/surfridereurope/mot

[options]
python_requires = >=3.5
package_dir=
    =src
packages = find:

[options.packages.find]
where=src
